--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,53 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<com.catcode.note_app.ui.TwoDScrollView
   xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:app="http://schemas.android.com/apk/res-auto"
   android:layout_width="match_parent"
   android:layout_height="match_parent">
 
-  <HorizontalScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fillViewport="true"
-    android:scrollbars="horizontal">
+  <LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
-    <LinearLayout
+    <include
+      android:id="@+id/header"
+      layout="@layout/item_note_header"
       android:layout_width="wrap_content"
-      android:layout_height="match_parent"
-      android:orientation="vertical">
+      android:layout_height="wrap_content"
+      android:background="@drawable/table_border" />
 
-      <include
-        android:id="@+id/header"
-        layout="@layout/item_note_header"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:background="@drawable/table_border"
-      />
+    <androidx.recyclerview.widget.RecyclerView
+      android:id="@+id/recyclerView"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content" />
 
-      <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        app:layout_constraintTop_toBottomOf="@id/header"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+  </LinearLayout>
 
-      <!-- <TextView
-          android:id="@+id/titleText"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:text="Meoww 🐱"
-          android:textSize="24sp"
-          android:layout_margin="16dp"
-          app:layout_constraintTop_toTopOf="parent"
-          app:layout_constraintStart_toStartOf="parent" /> -->
-
-    </LinearLayout>
-
-  </HorizontalScrollView>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</com.catcode.note_app.ui.TwoDScrollView>
