--- a/app/src/main/res/layout/item_note_header.xml
+++ b/app/src/main/res/layout/item_note_header.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
-  android:layout_width="match_parent"
+  android:layout_width="wrap_content"
   android:layout_height="wrap_content"
   android:orientation="horizontal"
   android:paddingHorizontal="8dp"
@@ -54,16 +54,6 @@
 		android:layout_height="wrap_content"
 		android:background="@drawable/cell_border"
 		android:text="Status"
-		android:textColor="@android:color/black"
-		android:textStyle="bold"
-		android:padding="8dp"/>
-
-    <!-- AKSI (STICKY RIGHT) -->
-  <TextView
-		android:layout_width="60dp"
-		android:layout_height="wrap_content"
-		android:background="@drawable/cell_border"
-		android:text="Aksi"
 		android:textColor="@android:color/black"
 		android:textStyle="bold"
 		android:padding="8dp"/>
