--- a/app/src/main/res/layout/item_note_row.xml
+++ b/app/src/main/res/layout/item_note_row.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
-  android:layout_width="match_parent"
+  android:layout_width="wrap_content"
   android:layout_height="wrap_content"
   android:orientation="horizontal"
   android:paddingHorizontal="8dp"
@@ -41,12 +41,4 @@
     android:layout_height="wrap_content"
     android:background="@drawable/cell_border"
     android:padding="8dp"/>
-
-  <!-- Aksi -->
-  <ImageButton
-    android:id="@+id/btnAction"
-    android:layout_width="60dp"
-    android:layout_height="wrap_content"
-    android:background="@drawable/cell_border"
-    android:src="@android:drawable/ic_menu_manage"/>
 </LinearLayout>
