--- a/app/src/main/res/layout/item_note_header.xml
+++ b/app/src/main/res/layout/item_note_header.xml
@@ -4,7 +4,7 @@
   android:layout_width="wrap_content"
   android:layout_height="wrap_content"
   android:orientation="horizontal"
-  android:paddingHorizontal="8dp"
+  android:paddingRight="8dp"
 >
 
     <!-- NAMA (STICKY LEFT) -->
