--- a/app/src/main/res/layout/item_index_row.xml
+++ b/app/src/main/res/layout/item_index_row.xml
@@ -4,4 +4,5 @@
   android:layout_height="wrap_content"
   android:gravity="center"
   android:padding="8dp"
-  android:background="@drawable/cell_border"/>
+  android:textColor="@android:color/black"
+/>
