--- a/app/src/main/res/layout/item_note_header.xml
+++ b/app/src/main/res/layout/item_note_header.xml
@@ -4,17 +4,16 @@
   android:layout_width="wrap_content"
   android:layout_height="wrap_content"
   android:orientation="horizontal"
-  android:paddingRight="8dp"
 >
 
-    <!-- NAMA (STICKY LEFT) -->
+  <!-- NAMA (STICKY LEFT) -->
   <TextView
     android:id="@+id/textNama"
     android:layout_width="100dp"
     android:layout_height="wrap_content"
-    android:background="@drawable/cell_border"
     android:text="Nama"
-    android:textColor="@android:color/black"
+    android:background="@drawable/cell_header_bg"
+    android:textColor="#333333"
     android:textStyle="bold"
     android:padding="8dp"/>
 
@@ -22,9 +21,9 @@
 		android:id="@+id/textDate"
 		android:layout_width="100dp"
 		android:layout_height="wrap_content"
-		android:background="@drawable/cell_border"
 		android:text="Tanggal"
-		android:textColor="@android:color/black"
+    android:background="@drawable/cell_header_bg"
+    android:textColor="#333333"
 		android:textStyle="bold"
 		android:padding="8dp"/>
 
@@ -32,9 +31,9 @@
 		android:id="@+id/textAlamat"
 		android:layout_width="120dp"
 		android:layout_height="wrap_content"
-		android:background="@drawable/cell_border"
 		android:text="Alamat"
-		android:textColor="@android:color/black"
+    android:background="@drawable/cell_header_bg"
+    android:textColor="#333333"
 		android:textStyle="bold"
 		android:padding="8dp"/>
 
@@ -42,9 +41,9 @@
 		android:id="@+id/textHarga"
 		android:layout_width="80dp"
 		android:layout_height="wrap_content"
-		android:background="@drawable/cell_border"
 		android:text="Harga"
-		android:textColor="@android:color/black"
+    android:background="@drawable/cell_header_bg"
+    android:textColor="#333333"
 		android:textStyle="bold"
 		android:padding="8dp"/>
 
@@ -52,9 +51,9 @@
 		android:id="@+id/textStatus"
 		android:layout_width="80dp"
 		android:layout_height="wrap_content"
-		android:background="@drawable/cell_border"
 		android:text="Status"
-		android:textColor="@android:color/black"
+    android:background="@drawable/cell_header_bg"
+    android:textColor="#333333"
 		android:textStyle="bold"
 		android:padding="8dp"/>
 </LinearLayout>
