--- a/app/src/main/res/layout/item_note_row.xml
+++ b/app/src/main/res/layout/item_note_row.xml
@@ -8,31 +8,61 @@
 
   <TextView
     android:id="@+id/textNama"
-    android:layout_width="100dp"
+    android:layout_width="120dp"
     android:layout_height="wrap_content"
-    android:padding="8dp"/>
+    android:padding="8dp"
+    android:autoSizeTextType="uniform"
+    android:autoSizeMinTextSize="10sp"
+    android:autoSizeMaxTextSize="14sp"
+    android:autoSizeStepGranularity="1sp"
+    android:maxLines="1"
+  />
 
   <TextView
     android:id="@+id/textDate"
     android:layout_width="100dp"
     android:layout_height="wrap_content"
-    android:padding="8dp"/>
+    android:padding="8dp"
+    android:autoSizeTextType="uniform"
+    android:autoSizeMinTextSize="10sp"
+    android:autoSizeMaxTextSize="14sp"
+    android:autoSizeStepGranularity="1sp"
+    android:maxLines="1"
+  />
 
   <TextView
     android:id="@+id/textAlamat"
     android:layout_width="120dp"
     android:layout_height="wrap_content"
-    android:padding="8dp"/>
+    android:padding="8dp"
+    android:autoSizeTextType="uniform"
+    android:autoSizeMinTextSize="10sp"
+    android:autoSizeMaxTextSize="14sp"
+    android:autoSizeStepGranularity="1sp"
+    android:maxLines="1"
+  />
 
   <TextView
     android:id="@+id/textHarga"
     android:layout_width="80dp"
     android:layout_height="wrap_content"
-    android:padding="8dp"/>
+    android:padding="8dp"
+    android:autoSizeTextType="uniform"
+    android:autoSizeMinTextSize="10sp"
+    android:autoSizeMaxTextSize="14sp"
+    android:autoSizeStepGranularity="1sp"
+    android:maxLines="1"
+  />
 
   <TextView
     android:id="@+id/textStatus"
     android:layout_width="80dp"
     android:layout_height="wrap_content"
-    android:padding="8dp"/>
+    android:padding="8dp"
+    android:autoSizeTextType="uniform"
+    android:autoSizeMinTextSize="10sp"
+    android:autoSizeMaxTextSize="14sp"
+    android:autoSizeStepGranularity="1sp"
+    android:maxLines="1"
+  />
 </LinearLayout>
