--- a/app/src/main/res/layout/item_note_header.xml
+++ b/app/src/main/res/layout/item_note_header.xml
@@ -8,7 +8,7 @@
 
   <!-- NAMA (STICKY LEFT) -->
   <TextView
-    android:id="@+id/textNama"
+    android:id="@+id/textName"
     android:layout_width="120dp"
     android:layout_height="wrap_content"
     android:text="Nama"
@@ -28,7 +28,7 @@
 		android:padding="8dp"/>
 
 	<TextView
-		android:id="@+id/textAlamat"
+		android:id="@+id/textAddress"
 		android:layout_width="120dp"
 		android:layout_height="wrap_content"
 		android:text="Alamat"
@@ -38,7 +38,7 @@
 		android:padding="8dp"/>
 
 	<TextView
-		android:id="@+id/textHarga"
+		android:id="@+id/textPrice"
 		android:layout_width="80dp"
 		android:layout_height="wrap_content"
 		android:text="Harga"
