--- a/app/src/main/res/layout/item_note_row.xml
+++ b/app/src/main/res/layout/item_note_row.xml
@@ -7,7 +7,7 @@
 >
 
   <TextView
-    android:id="@+id/textNama"
+    android:id="@+id/textName"
     android:layout_width="120dp"
     android:layout_height="wrap_content"
     android:padding="8dp"
@@ -31,7 +31,7 @@
   />
 
   <TextView
-    android:id="@+id/textAlamat"
+    android:id="@+id/textAddress"
     android:layout_width="120dp"
     android:layout_height="wrap_content"
     android:padding="8dp"
@@ -43,7 +43,7 @@
   />
 
   <TextView
-    android:id="@+id/textHarga"
+    android:id="@+id/textPrice"
     android:layout_width="80dp"
     android:layout_height="wrap_content"
     android:padding="8dp"
