--- a/app/src/main/res/menu/menu_note_row.xml
+++ b/app/src/main/res/menu/menu_note_row.xml
@@ -7,6 +7,8 @@
 
   <item
     android:id="@+id/action_delete"
-    android:title="Delete" />
+    android:title="Delete"
+    android:color="#BB1111"
+  />
 
 </menu>
