--- a/app/src/main/res/layout/dialog_add_note.xml
+++ b/app/src/main/res/layout/dialog_add_note.xml
@@ -16,7 +16,7 @@
     android:focusable="false"
     android:clickable="true"
     android:inputType="none"
-    android:drawableEnd="@android:drawable/ic_menu_my_calendar"
+    android:drawableEnd="@drawable/ic_calendar_333333"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"/>
 
