--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -27,7 +27,11 @@
       android:id="@+id/headerScroll"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:scrollbars="none">
+      android:scrollbars="none"
+      android:overScrollMode="never"
+      android:focusable="false"
+      android:focusableInTouchMode="false"
+    >
 
       <include
         android:id="@+id/header"
@@ -47,7 +51,10 @@
     <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/indexRecycler"
       android:layout_width="50dp"
-      android:layout_height="match_parent"/>
+      android:layout_height="match_parent"
+      android:overScrollMode="never"
+      android:nestedScrollingEnabled="false"
+    />
 
     <!-- TABLE -->
     <com.catcode.note_app.ui.TwoDScrollView
