--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -76,7 +76,7 @@
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:layout_gravity="start"
-    app:menu="@menu/drawer_menu"
+    app:headerLayout="@layout/drawer_about"
   />
 
 </androidx.drawerlayout.widget.DrawerLayout>
