--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,7 @@
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight="1"
-          android:text="Note App"
+          android:text="Karna Notes"
           android:textSize="20sp"
           android:textStyle="bold"
           android:textColor="@android:color/black"/>
